--- a/Prelim_Exam/css/style.css
+++ b/Prelim_Exam/css/style.css
@@ -25,6 +25,11 @@ img {
   color: #ffffff;
 }
 
+#thin{
+  font-family: 'Manrope', sans-serif;
+  color: #ffffff;
+}
+
 h1 {
   text-align: center;
   font-family: test-font;
@@ -50,7 +55,6 @@ h1 {
 
 .animated {
   background-position: left top;
-  padding-top: 50px;
   margin-bottom: 30px;
   -webkit-animation-duration: 5s;
   animation-duration: 5s;
